src/test/deca/syntax/parser/invalid/decl_var_type_symbole_brace.deca
// Test de parser, le type n'est pas valide, mais est un symbole bracket
// à la place

{
    { x = 5;
}